fix(app); 修复查询用户应用时未返回创建用户信息的问题
使用连接查询，同时返回应用信息与用户信息